# MatrixMatsu

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  install-badgelink.ps1
components/openh264_dec/: CMakeLists.txt
components/openh264_dec/openh264/common/src/: WelsThreadLib.cpp
components/openh264_dec/openh264/decoder/core/src/: decoder_core.cpp
components/openh264_dec/wrapper/: openh264_dec_wrapper.cpp  openh264_dec_wrapper.h
main/: CMakeLists.txt  audio_output.cpp  audio_output.h  audio_player.h  audio_player_decode.cpp  audio_player_stub.c  dobber_splash.c  dobber_splash.h  emoji_table.h  idf_component.yml  image_viewer.c  image_viewer.h  main.c  matrix_client.c  matrix_client.h  openh264_probe.cpp  openh264_probe.h  video_player.cpp  video_player.h
sdkconfigs/: general
starter-kit/: AGENT_PROMPT.md  COMMANDS.md  HARDWARE.md  PROJECT_MAP.md  README.md  bootstrap-matrixmatsu.ps1  clone-template-notes.md
tools/: emoji-data.json  gen-emoji-data.py  gen-emoji-table.py  make-emoji-assets.ps1  make-emoji-pack.ps1  package-app-repository.ps1  twemoji-filenames.txt
tools/media-proxy/: README.md  media-proxy.service  proxy.py
